--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 </head>
 <body>
 
+    <h2>tghis is h2</h2>
+
     <form action="" method="post" id="contactForm">
         <label for="fname">First Name</label>
         <input type="text" name="fname" placeholder="first name" id="fname">
